layout issues in implementing new home

--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -16,7 +16,7 @@ body{ background: url(../images/bg.jpg) fixed; margin: 0;}
 
 /* MENU */
 .menu{ width: 100%; margin: 0px auto; text-align: center; }
-.lista_menu{ width: 100%; background: #fafafa; margin-bottom: 15px;  padding: 5px;}
+.lista_menu{ width: 100%; background: #fafafa; margin-bottom: 15px;  padding: 5px; text-align: center;}
 .lista_menu ul{ list-style: none; width: 100%; margin-left: -37px;}
 .lista_menu li{ display: inline;  margin-top: 10px; background: #fafafa; padding: 5px;}
 .lista_menu li:hover{  background: #ededed; }
@@ -61,7 +61,7 @@ textarea{ border: 0px;  background: #f9f7f3; font-size: 12px; color: #857461; pa
 .submit_colorado{ height: 32px; background: #f9f7f3;}
 label{ font-size: 12px; color: #8c7964;}
 select, file{ border: 0px;  background: #f9f7f3; font-size: 12px; color: #857461; padding: 7px; margin-top: .3em;}
-.find_resort select{  background: white; font-size: 18px;
+.find_resort select{  background: white; font-size: 18px;}
 
 /* BOXES DOWN */
 .boxes_down{ width: 100%; float: left; margin-top: 15px;}
@@ -117,8 +117,8 @@ tr{ background-color: #f8f6f2; width: 100%; }
 
 
 /* FOOTER */
-.footer{ text-align: center; padding-bottom: 15px;}
-.footer img{ margin-top: 60px;}
+.foot{ text-align: center; padding-bottom: 15px;}
+.foot img{ margin-top: 60px;}
 
 /* ADMIN */
 
